# vac-o

./: CHANGELOG  CMakeLists.txt  CONTRIBUTORS  CombinatoryEngine.cpp  CombinatoryEngine.h  CombinatoryRegion.h  DevPlugin.cpp  GCRegion.h  Hamming.cpp  ICombinatoryEngine.h  ICombinatoryRegion.h  IFold.h  IFoldInverse.h  INeighborhood.h  IParameter.h  IPlugin.h  IPluginAdmin.h  IQAEngine.h  IQAMutator.h  IQARegion.h  IQAValidator.h  IRanker.h  ISequenceCmp.h  ISolution.h  IStrategy.h  IStructureCmp.h  ISubject.h  Makefile  PluginAdmin.cpp  PluginAdmin.h  ProjectHome.md  QAEngine.cpp  QAEngine.h  QARegion.h  RNAFold.cpp  RNAFoldInverse.h  Ranker.h  SSRegion.cpp  SSRegion.h  SequenceEvaluator.h  (+10 more)
RNAbackends/: CMakeLists.txt
RNAbackends/include/: Combinator.h  Hamming.h  IFold.h  IFoldInverse.h  INFORNA.h  ISequenceCmp.h  IStartProvider.h  IStructureCmp.h  RNABackendProxy.h  RNAFold.h  RNAFoldInverse.h  RNAForester.h  RNAStartInverse.h  RNAinverse.h  rna_backends_exceptions.h  rna_backends_types.h
RNAbackends/include/testing/: DistanceMatrixProviderMock.h  FoldInverseMock.h  FoldMock.h  StructureCmpMock.h
RNAbackends/src/: Hamming.cpp  INFORNA.cpp  RNAFold.cpp  RNAFoldInverse.cpp  RNAForester.cpp  RNAStartInverse.cpp  RNAinverse.cpp  SecStructure.cpp  viennaRNA.c
RNAbackends/testing/: HammingTests.cpp  INFORNATests.cpp  RNAFoldTests.cpp
libplugin/: CMakeLists.txt
libplugin/include/: AllMutator.h  Combinator.h  FirstImprovement.h  GCRegion.h  IQAMutator.h  IQAValidator.h  QARegion.h  RandomMutator.h  SSRegion.h  SSValidator.h  SequenceMutator.h  SimilitudeCmp.h  SimulatedAnnealing.h  Solution.h  Strategy.h  libplugin.h
libplugin/include/testing/: CombinatoryRegionMock.h  MutationMatrixProviderMock.h  QAValidatorMock.h
libplugin/profiling/: coverage_report.sh
libplugin/src/: AllMutator.cpp  BestImprovement.cpp  CombinatoryRegion.cpp  DevPlugin.cpp  FirstImprovement.cpp  GCRegion.cpp  Neighborhood.cpp  QARegion.cpp  RandomMutator.cpp  SSRegion.cpp  SSValidator.cpp  SequenceMutator.cpp  SimulatedAnnealing.cpp  Solution.cpp  Strategy.cpp  TripletsProductor.cpp
libplugin/testing/: BestImprovementTests.cpp  CMakeLists.txt  FirstImprovementTests.cpp  GCRegionTests.cpp  NeighborhoodTests.cpp  RandomMutatorTests.cpp  SSRegionTests.cpp  SSValidatorTests.cpp  SimulatedAnnealingTests.cpp
src/: CMakeLists.txt  CombinatoryEngine.cpp  CombinatoryEngine.h  CombinatoryRegion.h  DevPlugin.cpp  GCRegion.h  ICombinatoryEngine.h  ICombinatoryRegion.h  IFold.h  IFoldInverse.h  INSTALL  INeighborhood.h  IObserver.h  IParameter.h  IPlugin.h  IPluginAdmin.h  IQAEngine.h  IQAMutator.h  IQARegion.h  IQAValidator.h  IRanker.h  ISequenceCmp.h  ISequenceMutator.h  ISolution.h  IStructureCmp.h  ISubject.h  Parameter.h  PluginAdmin.h  QAEngine.cpp  QAEngine.h  QARegion.h  RNAFold.h  RNAFoldInverse.cpp  RNAForester.cpp  RNAForester.h  Ranker.h  SSRegion.h  SequenceEvaluator.cpp  SequenceEvaluator.h  SequenceMutator.h  (+8 more)
src/RNAbackends/: CMakeLists.txt  SConscript
src/RNAbackends/include/: Combinator.h  Hamming.h  IFold.h  IFoldInverse.h  ISequenceCmp.h  IStructureCmp.h  RNABackendProxy.h  RNAFold.h  RNAForester.h  RNAStartInverse.h  RNAinverse.h  rna_backends_exceptions.h  rna_backends_types.h
src/RNAbackends/profiling/: coverage_report.sh
src/RNAbackends/rna_backends/: RNABackendProxy.h
src/RNAbackends/src/: Hamming.cpp  INFORNA.cpp  RNABackendProxy.cpp  RNAFold.cpp  RNAFoldInverse.cpp  RNAForester.cpp  RNAStartInverse.cpp  RNAinverse.cpp
src/RNAbackends/testing/: CMakeLists.txt  RNAFoldTests.cpp  RNAForesterTests.cpp  RNAfold.sh  RNAinverseTests.cpp  SecStructureTests.cpp
src/RNAbackends/tests/: HammingTests.cpp  INFORNATests.cpp  RNAFoldTests.cpp  RNAforester.sh  RNAinverseTests.cpp  SecStructureTests.cpp
src/RNAbackends/vaco-rna-backends/: Combinator.h  Hamming.h  IFoldInverse.h  INFORNA.h  ISequenceCmp.h  IStartProvider.h  IStructureCmp.h  RNAFold.h  RNAForester.h  RNAStartInverse.h  RNAinverse.h
src/commons/: SConscript
src/commons/vaco-commons/: ICombinatoryRegion.h  INeighborhood.h  IObserver.h  IParameter.h  IPlugin.h  IQARegion.h  ISolution.h  IStrategy.h  ISubject.h  Parameter.h  RecombinantInfo.h  Subject.h  exceptions.h  types.h
src/core/: CMakeLists.txt  SConscript
src/core/include/: CombinatoryEngine.h  PluginAdmin.h  SequenceRanker.h
src/core/profiling/: coverage_report.sh
src/core/src/: CombinatoryEngine.cpp  PluginAdmin.cpp  QAEngine.cpp  SequenceOptimization.cpp  SequenceRanker.cpp  main.cpp
src/core/testing/: CMakeLists.txt  CombinatoryEngineTests.cpp  PluginAdminTests.cpp  QAEngineTests.cpp  RightPlugin.cpp  SequenceRankerTests.cpp  WrongPlugin.cpp
src/core/tests/: CombinatoryEngineTests.cpp  PluginAdminTests.cpp  QAEngineTests.cpp  RightPlugin.cpp  SConscript  SequenceRankerTests.cpp  WrongPlugin.cpp
src/core/vaco-core/: CombinatoryEngine.h  PluginAdmin.h  QAEngine.h  SequenceOptimization.h  SequenceRanker.h
src/include/: Combinator.h  ICombinatoryRegion.h  INeighborhood.h  IParameter.h  IPlugin.h  IQARegion.h  ISolution.h  IStrategy.h  ISubject.h  Parameter.h  Subject.h  exceptions.h  types.h
src/include/testing/: NeighborhoodMock.h  ObserverMock.h  PluginMock.h  SolutionMock.h  StrategyMock.h  SubjectMock.h
src/libplugin/: CMakeLists.txt  SConscript
src/libplugin/include/: AllMutator.h  BestImprovement.h  Combinator.h  CombinatoryRegion.h  FirstImprovement.h  GCRegion.h  IQAMutator.h  IQAValidator.h  ISequenceMutator.h  Neighborhood.h  QARegion.h  SSRegion.h  SSValidator.h  SequenceMutator.h  SimulatedAnnealing.h  Solution.h  Strategy.h  TripletsProductor.h  libplugin.h
src/libplugin/profiling/: coverage_report.sh
src/libplugin/src/: AllMutator.cpp  BestImprovement.cpp  CombinatoryRegion.cpp  DevPlugin.cpp  FirstImprovement.cpp  GCRegion.cpp  Neighborhood.cpp  QARegion.cpp  RandomMutator.cpp  SSRegion.cpp  SequenceMutator.cpp  SimulatedAnnealing.cpp  Solution.cpp  Strategy.cpp  TripletsProductor.cpp
src/libplugin/testing/: CMakeLists.txt  GCRegionTests.cpp  ParameterTests.cpp  QARegionTests.cpp  SSRegionTests.cpp  SolutionTests.cpp  (+5 more)
(+169 files in other folders)
